# rdfx

./: .gitignore  README.md  bitbucket-pipelines.yaml  convert.py  convert.sh  pre-commit-hooks.yaml  pyproject.toml  rdfx.py  rdfx.sh  requirements.txt  setup.py  temp.ttl
.github/workflows/: testing-github-action.yml
app/: rdfxWebApp.py  streamlitPS.py
pre_commit_hooks/: main.py
rdfx/: __init__.py  blocks.py  clean_ttl.py  persistence_systems.py  rdfx.py  rdfx_cli.py
src/: persistence_systems.py  rdfx.py
tests/: test_cmd_line_util.py  test_convert.py  test_merge.py  test_persistence_system_file.py  test_persistence_system_local_sop.py  test_persistence_system_remote_sop.py  test_persistence_system_s3.py  test_persistence_system_sop.py  test_persistence_systems_generic_methods.py  test_rdfx.py
tests/data/: file_01.ttl  file_02.rdf  file_03.json-ld  merge_01.ttl
tests/test_data/: file_1.ttl  file_2.ttl
