[tool.poetry]
name = "rdfx"
version = "0.2.0"
description = "Tools for converting, merging, persisting and reading RDF data in different formats."
authors = ["david-habgood <david.habgood@surroundaustralia.com>", "nicholas-car <nicholas.car@surroundaustralia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "^6.0.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
moto = "^2.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
