[tool.poetry]
name = "rdfx"
version = "0.2.0"
description = "Tools for converting, merging, persisting and reading RDF data in different formats."
authors = ["david-habgood <david.habgood@surroundaustralia.com>", "nicholas-car <nicholas.car@surroundaustralia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "^6.0.2"
requests = "^2.26.0"
httpx = "^0.20.0"
streamlit = {version = "^1.2.0", optional = true}
python-dotenv = {version = "^0.19.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
moto = "^2.2.9"
pytest-asyncio = "^0.16.0"

[tool.poetry.extras]
app = ["streamlit", "python-dotenv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
