[tool.poetry]
name = "rdfx"
version = "0.4.11"
description = "Tools for converting, merging, persisting and reading RDF data in different formats."
authors = ["david-habgood <david.habgood@surroundaustralia.com>", "nicholas-car <nicholas.car@surroundaustralia.com>","adam-davis <adam.davis@surroundaustralia.com>"]
maintainers = ["adam-davis <adam.davis@surroundaustralia.com>"]
readme = "README.md"
repository = "https://github.com/surroundaustralia/rdfx"
keywords = ["RDF", "Linked Data", "Turtle", "N-Triples", "Semantic Web", "RDFLib"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "^6.0.2"
requests = "^2.26.0"
streamlit = {version = "^1.2.0", optional = true}
python-dotenv = {version = "^0.19.2", optional = true}
boto3 = "^1.20.20"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
moto = "^2.2.9"
pytest-asyncio = "^0.16.0"
twine = "^4.0.1"

[tool.poetry.scripts]
rdfx = "rdfx.rdfx_cli:main"

[tool.poetry.extras]
app = ["streamlit", "python-dotenv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
